# hold-the-donut

./: .dockerignore  .gitignore  .mcp.json  Cargo.toml  Dockerfile  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/donut-carrier/: Cargo.toml
crates/donut-carrier/src/: config.rs  connect.rs  error.rs  io_glue.rs  lib.rs  mode.rs  placement.rs  session.rs  tests.rs
crates/donut-carrier/src/client/: mod.rs  packet_up.rs  stream_one.rs  stream_up.rs
crates/donut-carrier/src/server/: mod.rs  packet_up.rs  session_extract.rs  stream_one.rs  stream_up.rs
crates/donut-client/: Cargo.toml
crates/donut-client/src/: download.rs  h3_dial.rs  imports.rs  lib.rs  link.rs  local_proxy.rs  main.rs  raw_dial.rs  veil_dial.rs  xhttp_dial.rs
crates/donut-client/tests/: cascade_e2e.rs  fragment_e2e.rs  reality_cascade_e2e.rs  reality_e2e.rs  reality_fragment_e2e.rs  socks5_e2e.rs  veil_carrier_e2e.rs  veil_full_e2e.rs  veil_tunnel_e2e.rs
crates/donut-config/: Cargo.toml
crates/donut-config/src/: lib.rs  subgen.rs
crates/donut-core/: Cargo.toml
crates/donut-core/src/: address.rs  error.rs  id.rs  kinds.rs  lib.rs
crates/donut-dns/: Cargo.toml
crates/donut-dns/src/: lib.rs
crates/donut-geo/: Cargo.toml
crates/donut-geo/src/: lib.rs
crates/donut-io/: Cargo.toml
crates/donut-io/src/: lib.rs  vision.rs  vision_xray.rs
crates/donut-quic/: Cargo.toml
crates/donut-quic/src/: bidi.rs  client.rs  error.rs  lib.rs  server.rs  tests.rs
crates/donut-reality/: Cargo.toml
crates/donut-reality/src/: lib.rs
crates/donut-routing/: Cargo.toml
crates/donut-routing/src/: lib.rs
crates/donut-rustls/: Cargo.toml
crates/donut-rustls/src/: lib.rs  smoke.rs
crates/donut-server/: Cargo.toml
crates/donut-server/src/: fragment.rs  lib.rs  main.rs  metrics.rs  mux.rs  outbound.rs  proxy.rs  selfsteal.rs  subscription.rs  veil_server.rs  vision_xray_splice.rs
crates/donut-server/tests/: carrier_backend_e2e.rs  metrics_e2e.rs  proxy_e2e.rs  quic_proxy_e2e.rs  raw_e2e.rs  selfsteal_e2e.rs  tls_carrier_e2e.rs  tls_carrier_modes_e2e.rs
crates/donut-socks/: Cargo.toml
crates/donut-socks/src/: lib.rs
crates/donut-tls/: .rustfmt.toml  Cargo.toml  MODIFICATIONS.md  README.md
crates/donut-tls/src/: lib.rs
crates/donut-tls/src/client/: builder.rs  client_conn.rs  hs.rs
crates/donut-tls/src/crypto/: mod.rs
crates/donut-tls/src/msgs/: base.rs
crates/donut-tls/src/server/: builder.rs  hs.rs  server_conn.rs  tls13.rs
crates/donut-tools/: Cargo.toml
crates/donut-tools/src/: main.rs
crates/donut-veil/: Cargo.toml
crates/donut-veil/src/: auth.rs  client.rs  config.rs  error.rs  fingerprint.rs  kx.rs  lib.rs  parse.rs  proof.rs  reality_cert.rs  server.rs  tests.rs  verifier.rs
crates/donut-vless/: Cargo.toml
crates/donut-vless/src/: lib.rs
crates/donut-wire/: Cargo.toml
crates/donut-wire/benches/: codec.rs
crates/donut-wire/src/: addons.rs  error.rs  lib.rs  request.rs  vision.rs
crates/donut-xhttp/: Cargo.toml
crates/donut-xhttp/src/: lib.rs
docs/: ANALYSIS.md  CASCADE_ARCHITECTURE.md  CRATES.md  DEPLOY.md  DEPLOYMENT.md  FINGERPRINT.md  HANDOFF.md  PLAN.md  PRODUCTION.md  PROTOCOLS.md  README.md  REALITY-SELFSTEAL.md  REALITY_SERVER_SPEC.md  SCENARIOS.md  TECHNOLOGIES.md  TSPU_NOTES.md  TSPU_RECOVERY.md  VISION_PROTOCOL.md  XHTTP_DESIGN.md
docs/examples/: client.json  server.json
forks/rustls-reality/: Cargo.toml  PATCH_POINTS.md  README.md
forks/rustls-reality/rustls/: Cargo.toml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: decode_request.rs  decode_response.rs  encode_roundtrip.rs
scripts/xray-testbench/: README.md  docker-compose.yml  donut-xhttp-server.json  gen-keys.sh  xhttp-test.sh  xray-client-xhttp.json
