[package]
name = "donut-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
donut-core.workspace = true
donut-routing.workspace = true
donut-geo.workspace = true
donut-dns.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
base64.workspace = true
hex.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true

[dev-dependencies]
rcgen.workspace = true
