[package]
name = "donut-dns"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
donut-core.workspace = true
tokio.workspace = true
hickory-resolver.workspace = true
thiserror.workspace = true
tracing.workspace = true
