[package]
name = "donut-quic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
donut-core.workspace = true
donut-rustls.workspace = true
donut-carrier.workspace = true
quinn.workspace = true
h3.workspace = true
h3-quinn.workspace = true
http.workspace = true
hyper.workspace = true
hyper-util.workspace = true
rustls.workspace = true
tokio.workspace = true
tokio-util.workspace = true
bytes.workspace = true
futures-util.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
rcgen = { version = "0.14", features = ["pem", "ring"], default-features = false }
