[package]
name = "donut-routing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
donut-core.workspace = true
donut-geo.workspace = true
thiserror.workspace = true
tracing.workspace = true
smallvec.workspace = true
arc-swap.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
