[package]
name = "donut-rustls"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
donut-core.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
rustls-pki-types.workspace = true
webpki-roots.workspace = true
tokio.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true

# NOTE: This crate will be switched to the `rustls-reality` fork
# (see `forks/rustls-reality/`) once M2 lands its patches. Until then
# it is a thin wrapper over upstream rustls, sufficient for smoke
# tests of plain TLS.
