[package]
name = "donut-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "donut-server"
path = "src/main.rs"

[dependencies]
donut-core.workspace = true
donut-config.workspace = true
donut-veil.workspace = true
donut-wire.workspace = true
donut-carrier.workspace = true
donut-quic.workspace = true
donut-routing.workspace = true
donut-dns.workspace = true
donut-io.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "signal", "macros"] }
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
anyhow.workspace = true
