[package]
name = "donut-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "donut_server"
path = "src/lib.rs"

[[bin]]
name = "donut-server"
path = "src/main.rs"

[dependencies]
donut-core.workspace = true
donut-config.workspace = true
donut-veil.workspace = true
donut-wire.workspace = true
donut-carrier.workspace = true
donut-quic.workspace = true
donut-routing.workspace = true
donut-dns.workspace = true
donut-io.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "signal", "macros"] }
rustls.workspace = true
tokio-rustls.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread", "time"] }
bytes.workspace = true
