[package]
name = "donut-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "donut-tools"
path = "src/main.rs"

[dependencies]
donut-core.workspace = true
donut-config.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
x25519-dalek.workspace = true
rand.workspace = true
base64.workspace = true
hex.workspace = true
serde_json.workspace = true
