[package]
name = "donut-veil"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
donut-core.workspace = true
donut-rustls.workspace = true
rustls.workspace = true
x25519-dalek.workspace = true
aes-gcm.workspace = true
hkdf.workspace = true
hmac.workspace = true
sha2.workspace = true
rcgen.workspace = true
rand.workspace = true
zeroize.workspace = true
bytes.workspace = true
hex.workspace = true
ahash.workspace = true
thiserror.workspace = true
tracing.workspace = true
