[package]
name = "donut-wire"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
donut-core.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "codec"
harness = false
