[package]
name = "rustls"
version = "0.23.38"
edition = "2021"
rust-version = "1.71"
license = "Apache-2.0 OR ISC OR MIT"
description = "Rustls is a modern TLS library written in Rust. (Patched fork for hold-the-donut — see PATCH_POINTS.md)"
homepage = "https://github.com/rustls/rustls"
repository = "https://github.com/rustls/rustls"
categories = ["network-programming", "cryptography"]
autobenches = false
autotests = false
exclude = ["src/testdata", "tests/**", "benches/**", "examples/**"]
build = "build.rs"

[features]
default = ["aws_lc_rs", "logging", "prefer-post-quantum", "std", "tls12"]

aws-lc-rs = ["aws_lc_rs"] # Alias because Cargo features commonly use `-`
aws_lc_rs = ["dep:aws-lc-rs", "webpki/aws-lc-rs", "aws-lc-rs/aws-lc-sys", "aws-lc-rs/prebuilt-nasm"]
brotli = ["dep:brotli", "dep:brotli-decompressor", "std"]
custom-provider = []
fips = ["aws_lc_rs", "aws-lc-rs?/fips", "webpki/aws-lc-rs-fips"]
logging = ["log"]
prefer-post-quantum = ["aws_lc_rs"]
read_buf = ["rustversion", "std"]
ring = ["dep:ring", "webpki/ring"]
std = ["webpki/std", "pki-types/std", "once_cell/std"]
tls12 = []
zlib = ["dep:zlib-rs"]

[build-dependencies]
rustversion = { version = "1.0.6", optional = true }

[dependencies]
aws-lc-rs = { workspace = true, optional = true }
brotli = { workspace = true, optional = true }
brotli-decompressor = { workspace = true, optional = true }
hashbrown = { workspace = true, optional = true }
log = { workspace = true, optional = true }
once_cell = { workspace = true }
ring = { workspace = true, optional = true }
subtle = { workspace = true }
webpki = { workspace = true }
pki-types = { workspace = true }
zeroize = { workspace = true }
zlib-rs = { workspace = true, optional = true }

[package.metadata.docs.rs]
features = ["read_buf", "ring"]
rustdoc-args = ["--cfg", "rustls_docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  "cfg(bench)",
  "cfg(coverage_nightly)",
  "cfg(read_buf)",
  "cfg(rustls_docsrs)",
] }
